# rust-outbox

./: .env  .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sqlx-data.json
src/: db.rs  lib.rs  main.rs  models.rs  outbox.rs  rabbit_publisher.rs
