[package]
name = "outbox-publisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
lapin = "2.2.1"
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
tokio = { version = "1.28.1", features = ["full"] }
clokwerk = "0.4.0"
dotenvy = "0.15"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "macros", "mysql", "json", "chrono", "offline"] }
mockall = "0.11.4"
chrono = { version = "0.4.24", features = ["serde"] }
async-trait = "0.1.68"
